# users-service

./: .env.example  .env.test  .gitignore  .ruff.toml  LICENSE  alembic.ini  conftest.py  justfile  pyproject.toml
dockercompose/: dev.storages.yaml
dockercompose/postgres/initdb.d/: init-test-db.sh
src/: __main__.py  di.py  mediator.py  settings.py
src/api/: main.py
src/api/controllers/: main.py
src/api/controllers/tests/: test_healthcheck.py
src/api/middlewares/: main.py
src/api/tests/: fixtures.py
src/app/common/: commands.py  events.py  exceptions.py  interfaces.py
src/app/users/: commands.py  dto.py  exceptions.py
src/app/users/tests/: test_commands.py
src/domain/common/: events.py  exceptions.py  exeptions.py  services.py  value_objects.py
src/domain/users/: entities.py  events.py  exeptions.py  repositories.py  services.py
src/domain/users/tests/: test_services.py  utils.py
src/domain/users/value_objects/: user_id.py  username.py
src/infra/: settings.py
src/infra/db/: main.py  uow.py
src/infra/db/migrations/: env.py
src/infra/db/migrations/versions/: 2025_07_30_2250-ddc6f81c3b42_add_users_table.py
src/infra/db/models/: __init__.py  base.py  users.py
src/infra/db/repositories/: base.py  users.py
src/infra/db/repositories/tests/: test_users.py
src/infra/db/tests/: factories.py  fixtures.py
src/infra/event_bus/: bus.py  converters.py  exchanges.py  handlers.py
src/infra/event_bus/events/: __init__.py  base.py  user_created.py
src/infra/log/: formatters.py  main.py
src/infra/logs/: formatters.py
src/infra/message_broker/: brokers.py  factories.py  interfaces.py  main.py  uow.py
src/infra/message_broker/tests/: test_brokers.py
src/infra/message_brokers/: brokers.py  exceptions.py  factories.py  interfaces.py  main.py
src/infra/message_brokers/tests/: test_brokers.py
src/main/: mediator.py
src/presentation/api/: exeptions.py  main.py  setup_providers.py
src/presentation/api/controllers/: healthcheck.py  main.py  users.py
src/presentation/api/controllers/depends/: mediator.py
src/presentation/api/controllers/responses/: base.py
src/presentation/api/controllers/tests/: test_healthcheck.py  test_users.py
src/presentation/api/middlewares/: jsonlog.py  main.py
src/presentation/api/tests/: fixtures.py
src/tests/: exceptions.py
src/tests/api/: fixtures.py
src/tests/api/controllers/: test_healthcheck.py  test_users.py
src/tests/db/: fixtures.py
src/tests/db/repositories/: test_users.py
src/tests/users/: test_services.py
src/tests/users/value_objects/: test_username.py
