[project]
name = "example-service"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

license = {file = "LICENSE.md"}

authors = [
    { name = "eumozge", email = "eumozge@gmail.com" },
]
maintainers = [
    { name = "eumozge", email = "eumozge@gmail.com" },
]

packages = [
    { include = "", from = "src" },
]

dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = ["pre-commit"]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.2.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-dotenv>=0.5.2",
]
lint = [
    "mypy",
    "ruff",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = [
    "tests.py",
    "test_*.py",
]
addopts = [
    "-vv",
    "-s",
    "--color=yes",
    "--tb=auto",
]
env_files = [
    ".env.test"
]
